# XML-Parser

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker-image.yml
src/lib/: Engine.hpp  Serializer.cpp  Serializer.h
src/lib/common/: Base64.cpp  Base64.h  Stream.cpp  Stream.h
src/lib/processor/: Reader.cpp  Reader.h  Writer.cpp  Writer.h
